# app/model/http-model/transaction.go
@@ -4,3 +4,8 @@ type Transaction struct {
 	Amount    float64 `json:"amount"`
 	CreatedAt string  `json:"created_at"`
 }
+
+type InquiryTransaction struct {
+	StartTime string `json:"start_time"`
+	EndTime   string `json:"end_time"`
+}
