# docs/swagger.json
@@ -25,6 +25,48 @@
             }
         },
         "/v1/transaction": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create transaction.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "create transaction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Start Time",
+                        "name": "start_time",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End Time",
+                        "name": "end_time",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/repo.Transaction"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -49,7 +91,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TransactionRequest"
+                            "$ref": "#/definitions/http_model.Transaction"
                         }
                     }
                 ],
@@ -57,7 +99,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Transaction"
+                            "$ref": "#/definitions/repo.Transaction"
                         }
                     }
                 }
@@ -65,7 +107,7 @@
         }
     },
     "definitions": {
-        "model.Transaction": {
+        "http_model.Transaction": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -73,13 +115,10 @@
                 },
                 "created_at": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         },
-        "model.TransactionRequest": {
+        "repo.Transaction": {
             "type": "object",
             "properties": {
                 "amount": {
